Fix dropdown on react-tags z-Index

--- a/src/pages/Seller/Listings/New.scss
+++ b/src/pages/Seller/Listings/New.scss
@@ -28,6 +28,11 @@
         z-index: 9;
       }
     }
+
+    .react-tags__suggestions {
+      z-index: 10;
+    }
+
     h1 {
       margin: 2em 0;
       font-size: 32px;
